--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
-/*    https://simondaufresne.com/      https://hamishw.com/   */
 
 /* THEMES */
 [data-theme='light'] {
@@ -251,9 +250,88 @@ ul.socials li:first-child {
 
 /* MIDDLE COLUMN */
 
-.intro {
-  font-size: 5.36232vw;
+.intro-sec {
+  height: 50%;
+}
+
+.hi-text {
+  font-size: 5rem;
   line-height: 1.2;
+}
+
+.img-container {
+  position: relative;
+  width: 70%;
+  height: 100%;
+  overflow: hidden;
+
+}
+
+.img-container .intro-img {
+  width: 100%;
+  height: 100%;
+  animation: show-img 0s 1s forwards;
+  opacity: 0;
+}
+
+@keyframes show-img {
+  to   { opacity: 1; }
+}
+
+.img-container .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;  
+  display: block;
+  background: rgb(var(--rgbAccent));
+  opacity: 0;
+  animation: color-anim 2s normal;
+}
+
+@keyframes color-anim {
+  0% {
+    opacity: 1;
+    transform: scaleX(0);
+    transform-origin: 0% 50%;
+  }
+  50% {
+    transform: scaleX(1);
+    transform-origin: 0% 50%;
+  }
+  51% {
+    transform: scaleX(1);
+    transform-origin: 100% 50%;
+  }
+  100% {
+    transform: scaleX(0);
+    transform-origin: 100% 50%;
+    opacity: 1;
+  }
+}
+
+.intro {
+  animation: 2s anim-lineUp ease-out normal;
+  font-size: 2.5rem;
+}
+
+@keyframes anim-lineUp {
+  0% {
+    opacity: 0;
+    transform: translateY(80%);
+  }
+  20% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
 }
 
 #cards_landscape_wrap-2{
