--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 
+/*    https://www.thetouchagency.co.uk/branding/ https://simondaufresne.com/      https://hamishw.com/   */
+
 /* THEMES */
 [data-theme='light'] {
   --rgbBackground: 240 240 240;
@@ -259,6 +261,30 @@ ul.socials li:first-child {
   line-height: 1.2;
 }
 
+.intro-text {
+  animation: 2s anim-lineUp ease-out normal;
+  font-size: 2.5rem;
+}
+
+@keyframes anim-lineUp {
+  0% {
+    opacity: 0;
+    transform: translateY(80%);
+  }
+  20% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+}
+
+
 .img-container {
   position: relative;
   width: 70%;
@@ -311,28 +337,73 @@ ul.socials li:first-child {
   }
 }
 
-.intro {
-  animation: 2s anim-lineUp ease-out normal;
-  font-size: 2.5rem;
+.scroll-down {
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+.scroll-down::after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  content: '';
+  width: 100%;
+  height: 80%;
 }
 
-@keyframes anim-lineUp {
+
+
+.scroll-down a {
+  position: absolute;
+  bottom: 20px;
+  z-index: 2;
+  display: inline-block;
+  transform: translate(0, -50%);
+  color: var(--colorTextBody);
+  letter-spacing: .1em;
+  text-decoration: none;
+  transition: opacity .3s;
+}
+.scroll-down a:hover {
+  opacity: .5;
+}
+
+.scroll-down a {
+  padding-top: 70px;
+}
+.scroll-down a span {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 24px;
+  height: 24px;
+  margin-left: -12px;
+  border-left: 1px solid var(--colorTextBody);
+  border-bottom: 1px solid var(--colorTextBody);
+  transform: rotate(-45deg);
+  animation: sdb05 1.5s infinite;
+  box-sizing: border-box;
+}
+
+@keyframes sdb05 {
   0% {
-    opacity: 0;
-    transform: translateY(80%);
-  }
-  20% {
+    transform: rotate(-45deg) translate(0, 0);
     opacity: 0;
   }
   50% {
     opacity: 1;
-    transform: translateY(0%);
   }
   100% {
-    opacity: 1;
-    transform: translateY(0%);
+    transform: rotate(-45deg) translate(-20px, 20px);
+    opacity: 0;
   }
 }
+
+
+
+
+
+
 
 #cards_landscape_wrap-2{
   text-align: center;
